kustomize/overlays/development/pgsync.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsync-dev
spec:
  serviceName: pgsyc-dev
  replicas: 1
  selector:
    matchLabels:
      app: pgsync-dev
  template:
    metadata:
      labels:
        app: pgsync-dev
    spec:
      containers:
        - name: pgsync
          image: natsume197/pgsync:3.1.0
          command: [ "pgsync"]
          args: ["--config", "/data/schema.json", "--daemon"]
          # loop forever, outputting "yo" every 5 seconds
          # command: [ "sh", "-c"]
          # args: ["while true; do echo 'yo' && sleep 5; done;"]
          volumeMounts:
            - name: pgsync-dev-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: pgsync-dev-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-storage"
        resources:
          requests:
            storage: 100Mi
