kustomize/overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brigadasos-dev-db-ingress
  namespace: nadedb-dev
spec:
  tls:
    - hosts:
        - api.dev.brigadasos.xyz
      secretName: certificate-brigadasos-dev-db
  rules:
    - host: api.dev.brigadasos.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: brigadasos-dev-db-service
                port:
                  number: 5000
